Changed folder structure again, qol cmakelist changes, application class now creates a window

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,26 @@ cmake_minimum_required (VERSION 3.8)
 
 project ("DoctrinaSDK")
 
-add_subdirectory ("DoctrinaEngine")
+add_subdirectory ("DoctrinaEngine/Source")
 add_subdirectory ("Editor")
+
+#DELETE THE OUT FOLDER AFTER CHANGING THIS VARIABLE
+option(PRODUCTION_BUILD "Remove console and debug signatures" off)
+
+if(PRODUCTION_BUILD)
+	if(MSVC)
+
+	#Remove console and debug signatures
+
+		target_compile_definitions(DoctrinaEngine PUBLIC _CRT_SECURE_NO_WARNINGS)
+		target_compile_definitions(Editor PUBLIC _CRT_SECURE_NO_WARNINGS)
+
+
+		set_target_properties(DoctrinaEngine PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")
+		set_target_properties(Editor PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")
+
+	endif()
+endif()
 
 # Enable Hot Reload for MSVC compilers if supported.
 if (POLICY CMP0141)
