--- a/DoctrinaEngine/CMakeLists.txt
+++ b/DoctrinaEngine/CMakeLists.txt
@@ -6,10 +6,14 @@
 # | |__| | |__| | |____   | |  | | \ \ _| |_| |\  |/ ____ \  | |____| |\  | |__| |_| |_| |\  | |____ 
 # |_____/ \____/ \_____|  |_|  |_|  \_\_____|_| \_/_/    \_\ |______|_| \_|\_____|_____|_| \_|______|
                                                                                                     
-                                                                                
-add_library(DoctrinaEngine STATIC  "../DoctrinaEngine.h" "Application/Private/deApplication.cpp" "Application/Public/deApplication.h" "Core/Public/deVersion.h")
+file(GLOB_RECURSE DOCTRINAENGINE_SOURCE_CPP CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/Source/*.cpp")
+file(GLOB_RECURSE DOCTRINAENGINE_SOURCE_H CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/Source/*.h")
+file(GLOB_RECURSE DOCTRINAENGINE_HEADER CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/DoctrinaEngine.h")
 
-target_include_directories(DoctrinaEngine PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/")
+                                                                            
+add_library(DoctrinaEngine STATIC  ${DOCTRINAENGINE_SOURCE_CPP} ${DOCTRINAENGINE_SOURCE_H} ${DOCTRINAENGINE_HEADER})
+
+target_include_directories(DoctrinaEngine PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/Source/")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET DoctrinaEngine PROPERTY CXX_STANDARD 20)
