WIP console class for logging stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,12 @@ project ("DoctrinaSDK")
 add_subdirectory ("DoctrinaEngine")
 add_subdirectory ("Editor")
 
+target_compile_definitions(DoctrinaEngine PUBLIC "DEBUG=$<CONFIG:Debug>")
+target_compile_definitions(Editor PUBLIC "DEBUG=$<CONFIG:Debug>")
+
+target_compile_definitions(DoctrinaEngine PUBLIC "RELEASE=$<CONFIG:Release>")
+target_compile_definitions(Editor PUBLIC "RELEASE=$<CONFIG:Release>")
+
 #DELETE THE OUT FOLDER AFTER CHANGING THIS VARIABLE
 option(PRODUCTION_BUILD "Remove console and debug signatures" off)
 
