Editor is setup the recommended way, Changed all CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,26 +10,22 @@ cmake_minimum_required (VERSION 3.8)
 
 project ("DoctrinaSDK")
 
-add_compile_definitions("RELEASE=$<CONFIG:Release>")
+add_compile_definitions("NDEBUG=$<CONFIG:Release>")
 add_compile_definitions("DEBUG=$<CONFIG:Debug>")
 
 add_subdirectory ("DoctrinaEngine")
 add_subdirectory ("Editor")
 
 #DELETE THE OUT FOLDER AFTER CHANGING THIS VARIABLE
-option(PRODUCTION_BUILD "Remove console and debug signatures" off)
+option(PRODUCTION_BUILD "Remove debug signatures" off)
 
 if(PRODUCTION_BUILD)
 	if(MSVC)
 
-	#Remove console and debug signatures
+	# Remove debug signatures
 
 		target_compile_definitions(DoctrinaEngine PUBLIC _CRT_SECURE_NO_WARNINGS)
 		target_compile_definitions(Editor PUBLIC _CRT_SECURE_NO_WARNINGS)
-
-
-		set_target_properties(DoctrinaEngine PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")
-		set_target_properties(Editor PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")
 
 	endif()
 endif()
