--- a/Editor/CMakeLists.txt
+++ b/Editor/CMakeLists.txt
@@ -5,13 +5,27 @@
 # |  __| | |  | || |    | | | |  | |  _  / 
 # | |____| |__| || |_   | | | |__| | | \ \ 
 # |______|_____/_____|  |_|  \____/|_|  \_\
-                                                               
 
-add_executable (Editor "Source/Editor.cpp" "Source/Editor.h"  )
+cmake_minimum_required (VERSION 3.8)
+project ("Editor")
 
-target_link_libraries(Editor PRIVATE DoctrinaEngine)
+add_executable (${PROJECT_NAME}
+"Source/main.cpp" "Source/main.h"  
+"Source/framework.h"
+"Source/targetver.h"
+"Source/Resource/resource.h"
+"Source/Resource/Editor.rc"
+)
 
+ADD_DEFINITIONS(-DUNICODE)
+ADD_DEFINITIONS(-D_UNICODE)
+
+set_target_properties(${PROJECT_NAME}  PROPERTIES
+WIN32_EXECUTABLE YES
+)
+
+target_link_libraries(${PROJECT_NAME}  PRIVATE DoctrinaEngine)
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
-  set_property(TARGET Editor PROPERTY CXX_STANDARD 20)
+  set_property(TARGET ${PROJECT_NAME}  PROPERTY CXX_STANDARD 20)
 endif()
