--- a/.gitignore
+++ b/.gitignore
@@ -31,15 +31,9 @@
 *.out
 *.app
 
-#CMake
+#Build Results
 
 BUILD/
-OUT/
-
-#ThirdParty stuff that was installed with FetchContent_Declare
-
-ThirdParty/FetchContent
-
 
 #Visual Studio
 
