--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -9,7 +9,7 @@
       "installRoot": "${projectDir}\\OUT\\INSTALL\\${name}",
       "cmakeCommandArgs": "",
       "buildCommandArgs": "",
-      "ctestCommandArgs": ""
+      "ctestCommandArgs": "",
     },
     {
       "name": "Release",
@@ -20,7 +20,8 @@
       "cmakeCommandArgs": "",
       "buildCommandArgs": "",
       "ctestCommandArgs": "",
-      "inheritEnvironments": [ "msvc_x64_x64" ]
+      "inheritEnvironments": [ "msvc_x64_x64" ],
+
     }
   ]
 }
