--- a/DoctrinaEngine/CMakeLists.txt
+++ b/DoctrinaEngine/CMakeLists.txt
@@ -5,8 +5,12 @@
 # | |  | | |  | | |       | |  |  _  /  | | | . ` | / /\ \   |  __| | . ` | | |_ | | | | . ` |  __|  
 # | |__| | |__| | |____   | |  | | \ \ _| |_| |\  |/ ____ \  | |____| |\  | |__| |_| |_| |\  | |____ 
 # |_____/ \____/ \_____|  |_|  |_|  \_\_____|_| \_/_/    \_\ |______|_| \_|\_____|_____|_| \_|______|                                                                                                   
-                                                                        
-add_library(DoctrinaEngine STATIC "DoctrinaEngine.h" 
+                         
+cmake_minimum_required (VERSION 4.0.2)
+
+project ("DoctrinaEngine")
+
+add_library(${PROJECT_NAME} STATIC "DoctrinaEngine.h" 
 "Source/Application/Private/deApplication.cpp" "Source/Application/Public/deApplication.h" 
 "Source/Core/Private/deCVar.cpp" "Source/Core/Public/deCVar.h" 
 "Source/Core/Public/deVersion.h" 
@@ -14,9 +18,12 @@ add_library(DoctrinaEngine STATIC "DoctrinaEngine.h"
 "Source/Renderer/Private/deRHI_D3D11.cpp" "Source/Renderer/Private/deRHI_D3D11.h"
 "Source/Tools/Private/deConsole.cpp" "Source/Tools/Public/deConsole.h")
 
-target_include_directories(DoctrinaEngine PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/Source/")
+
+target_link_libraries(${PROJECT_NAME} PUBLIC SDL2-static)
+
+target_include_directories(${PROJECT_NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/Source/")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
-  set_property(TARGET DoctrinaEngine PROPERTY CXX_STANDARD 20)
+  set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 20)
 endif()
                
