--- a/DoctrinaEditor/CMakeLists.txt
+++ b/DoctrinaEditor/CMakeLists.txt
@@ -8,12 +8,15 @@
                                    
 cmake_minimum_required (VERSION 4.0.2)
 
-project ("Editor")
+project ("DoctrinaEditor")
 
-add_executable (${PROJECT_NAME} "Source/Editor.cpp" "Source/Editor.h"  )
+file(GLOB SOURCE_FILES CONFIGURE_DEPENDS "Source/*.cpp")
+
+add_executable(${PROJECT_NAME} ${SOURCE_FILES})
+
+target_precompile_headers(${PROJECT_NAME} PRIVATE "Source/stdafx.h")
 
 target_link_libraries(${PROJECT_NAME} PRIVATE DoctrinaEngine)
-
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 20)
