New editor class (WIP) and configured sdl3 to be static

--- a/Editor/CMakeLists.txt
+++ b/Editor/CMakeLists.txt
@@ -1,9 +1,21 @@
+
+#  ______ _____ _____ _______ ____  _____  
+# |  ____|  __ \_   _|__   __/ __ \|  __ \ 
+# | |__  | |  | || |    | | | |  | | |__) |
+# |  __| | |  | || |    | | | |  | |  _  / 
+# | |____| |__| || |_   | | | |__| | | \ \ 
+# |______|_____/_____|  |_|  \____/|_|  \_\
+
 cmake_minimum_required (VERSION 4.0.2)
 
-project("Editor")
+project("Editor" CXX)
 
+set(CMAKE_CXX_STANDARD 20)
 
-add_executable(${PROJECT_NAME} "Source/main.cpp")
+file(GLOB_RECURSE SOURCE_FILES CONFIGURE_DEPENDS "Source/*.cpp")
 
+add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 
 target_link_libraries(${PROJECT_NAME} PRIVATE DoctrinaEngine)
+
+target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/DoctrinaEngine/")
